--- a/Dockerfile.node
+++ b/Dockerfile.node
@@ -3,7 +3,7 @@ FROM node:latest
 COPY . .
 
 RUN npm install
-RUN npm run build:server
+RUN npm run server:build
 WORKDIR /dist/server
 
 CMD ["node", "app.js"]
